--- a/Dating App/style.css
+++ b/Dating App/style.css
@@ -1,3 +1,88 @@
 body {
+    font-family: Helvetica, arial, sans-serif;
+    background-color: pink;
     margin: 0;
+}
+
+header {
+    height: 18rem;
+}
+
+h1 {
+    font-size: 10rem;
+    text-align: center;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: hotpink;
+    margin: 10px 0;
+}
+
+h2 {
+    font-size: 2rem;
+    text-align: center;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: hotpink;
+    margin: 10px 0;
+}
+
+
+img {
+    border-radius: 60px;
+}
+
+/* Navigation styling */
+nav ul {
+    text-align: center;
+}
+nav ul li {
+    display: inline-block;
+    margin: 20px;
+}
+
+nav ul li a {
+    font-size: 1rem;
+    color: hotpink;
+}
+
+nav ul li a:hover {
+    color: white;
+}
+
+
+/* Frontpage pictures and cards styling */
+
+main {
+    height: 75rem;
+    text-align: center;
+}
+
+main img {
+    display: block;
+    margin: 0 auto;
+    padding: 10px;
+}
+
+article {
+    display: inline-block;
+    width: 20%;
+    margin: 40px 10px;
+    background-color: white;
+    border: 8px dotted hotpink;
+    border-radius: 60px;
+}
+
+article p {
+    color: grey;
+    margin: 10px 40px 30px 40px;
+    text-align: justify;
+}
+
+/* footer styling */
+footer {
+    text-align: center;
+    height: 5rem;
+    margin-top: 4rem;
+}
+
+footer a {
+    color: hotpink;
 }
